...
                            <constraint firstItem="mQw-fM-0y5" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="RpY-kp-2kE"/>
                            <constraint firstItem="gN3-3x-YMS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="liE-nZ-UYr"/>
                            <constraint firstItem="gN3-3x-YMS" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="qjo-aw-pUQ"/>
                            <constraint firstItem="mQw-fM-0y5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="wNl-ml-4Lj"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Films app" id="TZn-zt-Vue">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="heart.fill" catalog="system" id="fI5-pQ-dKa">
                            <color key="tintColor" systemColor="systemTealColor"/>
                            <connections>
                                <action selector="favoritBtnTapped:" destination="BYZ-38-t0r" id="HNl-Pj-N3Q"/>
                                <segue destination="SC9-fM-8zY" kind="show" identifier="likeData" id="2XQ-hP-lRi"/>
                            </connections>
                        </barButtonItem>
...
                            <constraint firstItem="EdJ-Oj-Lj1" firstAttribute="top" secondItem="Gfp-Tc-Omk" secondAttribute="top" id="KPG-Js-fGa"/>
                            <constraint firstItem="EdJ-Oj-Lj1" firstAttribute="leading" secondItem="Gfp-Tc-Omk" secondAttribute="leading" constant="10" id="Kio-KG-oRl"/>
                            <constraint firstItem="Gfp-Tc-Omk" firstAttribute="bottom" secondItem="EdJ-Oj-Lj1" secondAttribute="bottom" id="h7u-La-8fD"/>
                            <constraint firstItem="Gfp-Tc-Omk" firstAttribute="trailing" secondItem="EdJ-Oj-Lj1" secondAttribute="trailing" constant="10" id="jUq-UA-tkj"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Liked movies" id="YQZ-0u-2ES"/>
                    <connections>
                        <outlet property="collectionView" destination="EdJ-Oj-Lj1" id="A7P-m1-PI2"/>
                        <segue destination="car-Bs-c28" kind="show" identifier="showDetailFromFavotite" id="9cb-7D-EkU"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="2GI-3X-fBl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
