...
    let urlService = URLService()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        //добавляем возможность отследить кнопку в ui тестах
        allScreensButton.accessibilityIdentifier = "allScreens"
        
        //добавление стиля для кнопки просмотра всех скриншотов
        allScreensButton.layer.cornerRadius = 0
        allScreensButton.backgroundColor = .black.withAlphaComponent(0.6)
        
        //подключение кастомного нажатия для сердечка избранных
...
